<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorButtonNormal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <TextView
        android:id="@+id/notif_text"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/notification_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_text" />

    <TextView
        android:id="@+id/units_text"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/units_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notif_text" />

    <TextView
        android:id="@+id/daily_reset_text"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/daily_reset_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/units_text" />

    <TextView
        android:id="@+id/goal_text"
        android:layout_width="84dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="65dp"
        android:text="@string/goal_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/goal_input"
        android:layout_width="94dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/goal_text"
        app:layout_constraintTop_toTopOf="parent"
        android:imeOptions="actionDone" />

    <EditText
        android:id="@+id/daily_reset_input"
        android:layout_width="94dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/default_time"
        android:inputType="time"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/daily_reset_text"
        app:layout_constraintTop_toBottomOf="@+id/units_toggle" />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="17dp"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        android:onClick="applyGoal"
        android:text="@string/apply_text"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/goal_input"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/notif_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        android:onClick="togNotifs"
        android:text="@string/default_toggle"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toEndOf="@+id/notif_text"
        app:layout_constraintTop_toBottomOf="@+id/apply_button" />

    <ToggleButton
        android:id="@+id/units_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:checked="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="togUnits"
        android:text="@string/oz_ml_toggle"
        android:textColor="@android:color/background_dark"
        android:textOff="@string/ml"
        android:textOn="@string/oz"
        app:layout_constraintStart_toEndOf="@+id/units_text"
        app:layout_constraintTop_toBottomOf="@+id/notif_toggle" />

</android.support.constraint.ConstraintLayout>