<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".notif">

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="2dp"
        android:background="@color/colorText"
        android:onClick="cancelNotifs"
        android:text="@string/cancel_btn"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="2dp"
        android:background="@color/colorText"
        android:onClick="saveNotifs"
        android:text="@string/save_btn"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notif1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/notif_freq"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel" />

    <TextView
        android:id="@+id/notif2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/notif_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notif1" />

    <TextView
        android:id="@+id/notif3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/notif_thresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notif2" />

    <TextView
        android:id="@+id/notif4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notif_goal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notif3" />

    <TextView
        android:id="@+id/notif5"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:text="@string/by"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/emailPref"
        app:layout_constraintEnd_toEndOf="@+id/notif4"
        app:layout_constraintStart_toStartOf="@+id/notif4"
        app:layout_constraintTop_toTopOf="@+id/emailPref" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/emailPref"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/notif_email"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        app:buttonTint="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notif4" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInContainer"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notif5">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notif_email_hint"
            android:textColor="@color/colorText"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spEmailNotifTime"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/notif_time_array"
        app:layout_constraintBottom_toBottomOf="@+id/notif5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notif5"
        app:layout_constraintTop_toTopOf="@+id/notif5" />

    <Spinner
        android:id="@+id/spNotifFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:entries="@array/notif_freq_array"
        app:layout_constraintBottom_toBottomOf="@+id/notif1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notif1" />

    <Spinner
        android:id="@+id/spNotifStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:entries="@array/notif_time_array"
        app:layout_constraintBottom_toBottomOf="@+id/notif2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notif2" />

    <Spinner
        android:id="@+id/spNotifPct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/notif_thresh_array"
        app:layout_constraintBottom_toBottomOf="@+id/notif3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notif3" />
</android.support.constraint.ConstraintLayout>